Corrected the problem in the middle section of Bio08~Bio11 area and temperature unit conversion

--- a/Biovlimatic_variable.ipynb
+++ b/Biovlimatic_variable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data.csv')"
+    "data = pd.read_csv('D:\\google_earth_engine\\google_erath_engine_era5\\Bio\\data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Group by year and month to calculate the average temperature and total precipitation per month\n",
+    "data.sort_values(by=['ID', 'Date'], inplace=True)\n",
+    "\n",
+    "data['Temp'] = data['Temp'] - 273.15\n",
+    "data['Tmax'] = data['Tmax'] - 273.15\n",
+    "data['Tmin'] = data['Tmin'] - 273.15\n",
+    "\n",
     "monthly_data = data.groupby(['ID', 'Year', 'Month']).agg({\n",
     "    'Temp': 'mean',\n",
     "    'Tmin': 'min',\n",
     "    'Tmax': 'max',\n",
     "    'Prec': 'sum'\n",
     "}).reset_index()\n",
-    "\n",
     "\n",
     "# bio01: Average annual temperature\n",
     "monthly_data['Bio01'] = monthly_data['Temp']\n",
@@ -98,34 +103,53 @@
     "\n",
     "# bio08: Average temperature for the month with the highest cumulative precipitation over 3 consecutive months\n",
     "# First calculate the cumulative precipitation for each month\n",
-    "monthly_data['cumulative_precipitation'] = monthly_data.groupby(['ID', 'Year'])['Prec'].cumsum()\n",
+    "\n",
+    "rolling_data = data\n",
+    "rolling_data['cumulative_precipitation'] = rolling_data.groupby('ID')['Prec'].cumsum()\n",
+    "\n",
+    "rolling_data['max_precip_3months'] = rolling_data.groupby('ID')['cumulative_precipitation'].transform(lambda x: x.rolling(window=3, min_periods=1).max())\n",
+    "final_data = rolling_data.drop_duplicates(subset=['ID', 'Year', 'Month'], keep='last')[['ID', 'Year', 'Month', 'max_precip_3months']]\n",
     "\n",
     "# Find the month with the highest cumulative precipitation over 3 consecutive months\n",
-    "max_rain_month = monthly_data.groupby(['ID', 'Year'])['cumulative_precipitation'].rolling(window=3).max().reset_index()\n",
+    "# max_rain_month = monthly_data.groupby(['ID', 'Year'])['cumulative_precipitation'].rolling(window=3).max().reset_index()\n",
     "\n",
-    "# Add the average temperature of the month with the highest precipitation to the data\n",
-    "monthly_data['Bio08'] = max_rain_month['cumulative_precipitation']\n",
+    "\n",
+    "monthly_data = monthly_data.merge(final_data, on=['ID', 'Year', 'Month'], how='left')\n",
+    "monthly_data.rename(columns={'max_precip_3months': 'Bio08'}, inplace=True)\n",
+    "\n",
     "\n",
     "# bio09: Average temperature of the driest quarter\n",
-    "# Find the month with the least cumulative precipitation over 3 consecutive months\n",
-    "min_rain_month = monthly_data.groupby(['ID', 'Year'])['cumulative_precipitation'].rolling(window=3).min().reset_index()\n",
+    "rolling_data = data\n",
+    "rolling_data['cumulative_precipitation'] = rolling_data.groupby('ID')['Prec'].cumsum()\n",
     "\n",
-    "# Add the average temperature of the driest month to the data\n",
-    "monthly_data['Bio09'] = min_rain_month['cumulative_precipitation']\n",
+    "rolling_data['min_precip_3months'] = rolling_data.groupby('ID')['cumulative_precipitation'].transform(lambda x: x.rolling(window=3, min_periods=1).min())\n",
+    "final_data = rolling_data.drop_duplicates(subset=['ID', 'Year', 'Month'], keep='last')[['ID', 'Year', 'Month', 'min_precip_3months']]\n",
+    "\n",
+    "monthly_data = monthly_data.merge(final_data, on=['ID', 'Year', 'Month'], how='left')\n",
+    "monthly_data.rename(columns={'min_precip_3months': 'Bio09'}, inplace=True)\n",
     "\n",
     "# bio10: Average temperature of the warmest quarter\n",
     "# Find the month with the highest average temperature over 3 consecutive months\n",
-    "max_temp_quarter = monthly_data.groupby(['ID', 'Year'])['Temp'].rolling(window=3).max().reset_index()\n",
+    "rolling_data = data\n",
+    "rolling_data['cumulative_temp'] = rolling_data.groupby('ID')['Temp'].cumsum()\n",
     "\n",
-    "# Add the average temperature of the warmest month to the data\n",
-    "monthly_data['Bio10'] = max_temp_quarter['Temp']\n",
+    "rolling_data['max_temp_3months'] = rolling_data.groupby('ID')['cumulative_temp'].transform(lambda x: x.rolling(window=3, min_periods=1).max())\n",
+    "final_data = rolling_data.drop_duplicates(subset=['ID', 'Year', 'Month'], keep='last')[['ID', 'Year', 'Month', 'max_temp_3months']]\n",
+    "\n",
+    "\n",
+    "monthly_data = monthly_data.merge(final_data, on=['ID', 'Year', 'Month'], how='left')\n",
+    "monthly_data.rename(columns={'max_temp_3months': 'Bio10'}, inplace=True)\n",
     "\n",
     "# bio11: Average temperature of the coldest quarter\n",
     "# Find the month with the lowest average temperature over 3 consecutive months\n",
-    "min_temp_quarter = monthly_data.groupby(['ID', 'Year'])['Temp'].rolling(window=3).min().reset_index()\n",
+    "rolling_data = data\n",
+    "rolling_data['cumulative_temp'] = rolling_data.groupby('ID')['Temp'].cumsum()\n",
     "\n",
-    "# Add the average temperature of the coldest month to the data\n",
-    "monthly_data['Bio11'] = min_temp_quarter['Temp']\n",
+    "rolling_data['min_temp_3months'] = rolling_data.groupby('ID')['cumulative_temp'].transform(lambda x: x.rolling(window=3, min_periods=1).min())\n",
+    "final_data = rolling_data.drop_duplicates(subset=['ID', 'Year', 'Month'], keep='last')[['ID', 'Year', 'Month', 'min_temp_3months']]\n",
+    "\n",
+    "monthly_data = monthly_data.merge(final_data, on=['ID', 'Year', 'Month'], how='left')\n",
+    "monthly_data.rename(columns={'min_temp_3months': 'Bio11'}, inplace=True)\n",
     "\n",
     "# bio12: Annual precipitation\n",
     "annual_precipitation = data.groupby(['ID', 'Year'])['Prec'].sum().reset_index()\n",
@@ -170,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +220,7 @@
        "      <th></th>\n",
        "      <th>ID</th>\n",
        "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
        "      <th>Temp</th>\n",
        "      <th>Tmax</th>\n",
        "      <th>Tmin</th>\n",
@@ -203,7 +228,6 @@
        "      <th>Bio02</th>\n",
        "      <th>Bio03</th>\n",
        "      <th>Bio04</th>\n",
-       "      <th>Bio05</th>\n",
        "      <th>...</th>\n",
        "      <th>Bio10</th>\n",
        "      <th>Bio11</th>\n",
@@ -222,6 +246,7 @@
        "      <th>0</th>\n",
        "      <td>Abia</td>\n",
        "      <td>2016</td>\n",
+       "      <td>1</td>\n",
        "      <td>301.822083</td>\n",
        "      <td>309.818440</td>\n",
        "      <td>292.485026</td>\n",
@@ -229,10 +254,9 @@
        "      <td>17.333414</td>\n",
        "      <td>91.560896</td>\n",
        "      <td>1.820378</td>\n",
-       "      <td>311.416049</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3018.220830</td>\n",
+       "      <td>2414.785303</td>\n",
        "      <td>2.346305</td>\n",
        "      <td>0.373970</td>\n",
        "      <td>0.000051</td>\n",
@@ -246,6 +270,7 @@
        "      <th>1</th>\n",
        "      <td>Abia</td>\n",
        "      <td>2016</td>\n",
+       "      <td>2</td>\n",
        "      <td>303.404970</td>\n",
        "      <td>311.416049</td>\n",
        "      <td>293.600568</td>\n",
@@ -253,10 +278,9 @@
        "      <td>17.815481</td>\n",
        "      <td>94.107335</td>\n",
        "      <td>1.820378</td>\n",
-       "      <td>311.416049</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>11816.964968</td>\n",
+       "      <td>11210.368337</td>\n",
        "      <td>2.346305</td>\n",
        "      <td>0.373970</td>\n",
        "      <td>0.000051</td>\n",
@@ -270,6 +294,7 @@
        "      <th>2</th>\n",
        "      <td>Abia</td>\n",
        "      <td>2016</td>\n",
+       "      <td>3</td>\n",
        "      <td>300.428729</td>\n",
        "      <td>308.314380</td>\n",
        "      <td>296.658108</td>\n",
@@ -277,10 +302,9 @@
        "      <td>11.656273</td>\n",
        "      <td>61.572335</td>\n",
        "      <td>1.820378</td>\n",
-       "      <td>311.416049</td>\n",
        "      <td>...</td>\n",
-       "      <td>303.404970</td>\n",
-       "      <td>300.428729</td>\n",
+       "      <td>21130.255560</td>\n",
+       "      <td>20529.004652</td>\n",
        "      <td>2.346305</td>\n",
        "      <td>0.373970</td>\n",
        "      <td>0.000051</td>\n",
@@ -294,6 +318,7 @@
        "      <th>3</th>\n",
        "      <td>Abia</td>\n",
        "      <td>2016</td>\n",
+       "      <td>4</td>\n",
        "      <td>300.422143</td>\n",
        "      <td>306.183258</td>\n",
        "      <td>297.173205</td>\n",
@@ -301,10 +326,9 @@
        "      <td>9.010053</td>\n",
        "      <td>47.594118</td>\n",
        "      <td>1.820378</td>\n",
-       "      <td>311.416049</td>\n",
        "      <td>...</td>\n",
-       "      <td>303.404970</td>\n",
-       "      <td>300.422143</td>\n",
+       "      <td>30142.919844</td>\n",
+       "      <td>29540.985783</td>\n",
        "      <td>2.346305</td>\n",
        "      <td>0.373970</td>\n",
        "      <td>0.000051</td>\n",
@@ -318,6 +342,7 @@
        "      <th>4</th>\n",
        "      <td>Abia</td>\n",
        "      <td>2016</td>\n",
+       "      <td>5</td>\n",
        "      <td>299.306844</td>\n",
        "      <td>305.852426</td>\n",
        "      <td>295.684647</td>\n",
@@ -325,10 +350,9 @@
        "      <td>10.167779</td>\n",
        "      <td>53.709615</td>\n",
        "      <td>1.820378</td>\n",
-       "      <td>311.416049</td>\n",
        "      <td>...</td>\n",
-       "      <td>300.428729</td>\n",
-       "      <td>299.306844</td>\n",
+       "      <td>39421.432005</td>\n",
+       "      <td>38823.974541</td>\n",
        "      <td>2.346305</td>\n",
        "      <td>0.373970</td>\n",
        "      <td>0.000051</td>\n",
@@ -366,6 +390,7 @@
        "      <th>2237</th>\n",
        "      <td>Zamfara</td>\n",
        "      <td>2020</td>\n",
+       "      <td>7</td>\n",
        "      <td>299.114053</td>\n",
        "      <td>307.019243</td>\n",
        "      <td>294.717056</td>\n",
@@ -373,10 +398,9 @@
        "      <td>12.302186</td>\n",
        "      <td>40.142973</td>\n",
        "      <td>3.301192</td>\n",
-       "      <td>314.389822</td>\n",
        "      <td>...</td>\n",
-       "      <td>304.498867</td>\n",
-       "      <td>299.114053</td>\n",
+       "      <td>496771.783479</td>\n",
+       "      <td>496174.330117</td>\n",
        "      <td>0.810643</td>\n",
        "      <td>0.388939</td>\n",
        "      <td>0.000022</td>\n",
@@ -390,6 +414,7 @@
        "      <th>2238</th>\n",
        "      <td>Zamfara</td>\n",
        "      <td>2020</td>\n",
+       "      <td>8</td>\n",
        "      <td>297.520809</td>\n",
        "      <td>304.232498</td>\n",
        "      <td>293.674831</td>\n",
@@ -397,10 +422,9 @@
        "      <td>10.557667</td>\n",
        "      <td>34.450474</td>\n",
        "      <td>3.301192</td>\n",
-       "      <td>314.389822</td>\n",
        "      <td>...</td>\n",
-       "      <td>302.697589</td>\n",
-       "      <td>297.520809</td>\n",
+       "      <td>505994.928571</td>\n",
+       "      <td>505401.352941</td>\n",
        "      <td>0.810643</td>\n",
        "      <td>0.388939</td>\n",
        "      <td>0.000022</td>\n",
@@ -414,6 +438,7 @@
        "      <th>2239</th>\n",
        "      <td>Zamfara</td>\n",
        "      <td>2020</td>\n",
+       "      <td>9</td>\n",
        "      <td>298.503096</td>\n",
        "      <td>305.857032</td>\n",
        "      <td>293.832603</td>\n",
@@ -421,10 +446,9 @@
        "      <td>12.024429</td>\n",
        "      <td>39.236629</td>\n",
        "      <td>3.301192</td>\n",
-       "      <td>314.389822</td>\n",
        "      <td>...</td>\n",
-       "      <td>299.114053</td>\n",
-       "      <td>297.520809</td>\n",
+       "      <td>514950.021440</td>\n",
+       "      <td>514352.199511</td>\n",
        "      <td>0.810643</td>\n",
        "      <td>0.388939</td>\n",
        "      <td>0.000022</td>\n",
@@ -438,6 +462,7 @@
        "      <th>2240</th>\n",
        "      <td>Zamfara</td>\n",
        "      <td>2020</td>\n",
+       "      <td>10</td>\n",
        "      <td>299.503749</td>\n",
        "      <td>307.746636</td>\n",
        "      <td>291.504255</td>\n",
@@ -445,10 +470,9 @@
        "      <td>16.242381</td>\n",
        "      <td>53.000127</td>\n",
        "      <td>3.301192</td>\n",
-       "      <td>314.389822</td>\n",
        "      <td>...</td>\n",
-       "      <td>299.503749</td>\n",
-       "      <td>297.520809</td>\n",
+       "      <td>524234.637655</td>\n",
+       "      <td>523635.529060</td>\n",
        "      <td>0.810643</td>\n",
        "      <td>0.388939</td>\n",
        "      <td>0.000022</td>\n",
@@ -462,6 +486,7 @@
        "      <th>2241</th>\n",
        "      <td>Zamfara</td>\n",
        "      <td>2020</td>\n",
+       "      <td>11</td>\n",
        "      <td>298.475683</td>\n",
        "      <td>306.530985</td>\n",
        "      <td>290.632392</td>\n",
@@ -469,10 +494,9 @@
        "      <td>15.898592</td>\n",
        "      <td>51.878319</td>\n",
        "      <td>3.301192</td>\n",
-       "      <td>314.389822</td>\n",
        "      <td>...</td>\n",
-       "      <td>299.503749</td>\n",
-       "      <td>298.475683</td>\n",
+       "      <td>530801.102683</td>\n",
+       "      <td>530205.315727</td>\n",
        "      <td>0.810643</td>\n",
        "      <td>0.388939</td>\n",
        "      <td>0.000022</td>\n",
@@ -484,35 +508,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2242 rows × 24 columns</p>\n",
+       "<p>2242 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           ID  Year        Temp        Tmax        Tmin       Bio01  \\\n",
-       "0        Abia  2016  301.822083  309.818440  292.485026  301.822083   \n",
-       "1        Abia  2016  303.404970  311.416049  293.600568  303.404970   \n",
-       "2        Abia  2016  300.428729  308.314380  296.658108  300.428729   \n",
-       "3        Abia  2016  300.422143  306.183258  297.173205  300.422143   \n",
-       "4        Abia  2016  299.306844  305.852426  295.684647  299.306844   \n",
-       "...       ...   ...         ...         ...         ...         ...   \n",
-       "2237  Zamfara  2020  299.114053  307.019243  294.717056  299.114053   \n",
-       "2238  Zamfara  2020  297.520809  304.232498  293.674831  297.520809   \n",
-       "2239  Zamfara  2020  298.503096  305.857032  293.832603  298.503096   \n",
-       "2240  Zamfara  2020  299.503749  307.746636  291.504255  299.503749   \n",
-       "2241  Zamfara  2020  298.475683  306.530985  290.632392  298.475683   \n",
+       "           ID  Year  Month        Temp        Tmax        Tmin       Bio01  \\\n",
+       "0        Abia  2016      1  301.822083  309.818440  292.485026  301.822083   \n",
+       "1        Abia  2016      2  303.404970  311.416049  293.600568  303.404970   \n",
+       "2        Abia  2016      3  300.428729  308.314380  296.658108  300.428729   \n",
+       "3        Abia  2016      4  300.422143  306.183258  297.173205  300.422143   \n",
+       "4        Abia  2016      5  299.306844  305.852426  295.684647  299.306844   \n",
+       "...       ...   ...    ...         ...         ...         ...         ...   \n",
+       "2237  Zamfara  2020      7  299.114053  307.019243  294.717056  299.114053   \n",
+       "2238  Zamfara  2020      8  297.520809  304.232498  293.674831  297.520809   \n",
+       "2239  Zamfara  2020      9  298.503096  305.857032  293.832603  298.503096   \n",
+       "2240  Zamfara  2020     10  299.503749  307.746636  291.504255  299.503749   \n",
+       "2241  Zamfara  2020     11  298.475683  306.530985  290.632392  298.475683   \n",
        "\n",
-       "          Bio02      Bio03     Bio04       Bio05  ...       Bio10       Bio11  \\\n",
-       "0     17.333414  91.560896  1.820378  311.416049  ...         NaN         NaN   \n",
-       "1     17.815481  94.107335  1.820378  311.416049  ...         NaN         NaN   \n",
-       "2     11.656273  61.572335  1.820378  311.416049  ...  303.404970  300.428729   \n",
-       "3      9.010053  47.594118  1.820378  311.416049  ...  303.404970  300.422143   \n",
-       "4     10.167779  53.709615  1.820378  311.416049  ...  300.428729  299.306844   \n",
-       "...         ...        ...       ...         ...  ...         ...         ...   \n",
-       "2237  12.302186  40.142973  3.301192  314.389822  ...  304.498867  299.114053   \n",
-       "2238  10.557667  34.450474  3.301192  314.389822  ...  302.697589  297.520809   \n",
-       "2239  12.024429  39.236629  3.301192  314.389822  ...  299.114053  297.520809   \n",
-       "2240  16.242381  53.000127  3.301192  314.389822  ...  299.503749  297.520809   \n",
-       "2241  15.898592  51.878319  3.301192  314.389822  ...  299.503749  298.475683   \n",
+       "          Bio02      Bio03     Bio04  ...          Bio10          Bio11  \\\n",
+       "0     17.333414  91.560896  1.820378  ...    3018.220830    2414.785303   \n",
+       "1     17.815481  94.107335  1.820378  ...   11816.964968   11210.368337   \n",
+       "2     11.656273  61.572335  1.820378  ...   21130.255560   20529.004652   \n",
+       "3      9.010053  47.594118  1.820378  ...   30142.919844   29540.985783   \n",
+       "4     10.167779  53.709615  1.820378  ...   39421.432005   38823.974541   \n",
+       "...         ...        ...       ...  ...            ...            ...   \n",
+       "2237  12.302186  40.142973  3.301192  ...  496771.783479  496174.330117   \n",
+       "2238  10.557667  34.450474  3.301192  ...  505994.928571  505401.352941   \n",
+       "2239  12.024429  39.236629  3.301192  ...  514950.021440  514352.199511   \n",
+       "2240  16.242381  53.000127  3.301192  ...  524234.637655  523635.529060   \n",
+       "2241  15.898592  51.878319  3.301192  ...  530801.102683  530205.315727   \n",
        "\n",
        "         Bio12     Bio13     Bio14       Bio15     Bio16     Bio17     Bio18  \\\n",
        "0     2.346305  0.373970  0.000051  124.993172  1.043558  0.249978  1.043558   \n",
@@ -540,10 +564,10 @@
        "2240  0.003023  \n",
        "2241  0.003023  \n",
        "\n",
-       "[2242 rows x 24 columns]"
+       "[2242 rows x 25 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +575,7 @@
    "source": [
     "select_columns = ['ID', \n",
     "                  'Year',\n",
-    "                  'Month'\n",
+    "                  'Month',\n",
     "                  'Temp', \n",
     "                  'Tmax', \n",
     "                  'Tmin',\n",
@@ -580,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
